[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/abilities/energy/energy_beam.gd" type="Script" id=1]
[ext_resource path="res://assets/effects/baseparticles/circle_05.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.702632, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.994737, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color = Color( 0.0941176, 0.67451, 0.843137, 1 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 4 )
color = Color( 0.0941176, 0.67451, 0.843137, 1 )
color_ramp = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0

[sub_resource type="Environment" id=8]
background_mode = 4
glow_enabled = true
glow_intensity = 0.5
glow_blend_mode = 0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 39.5, 177.5 )

[node name="RayCast2D" type="RayCast2D"]
position = Vector2( 159, 307 )
cast_to = Vector2( 1000, 0 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 200, 0 )
default_color = Color( 0.627451, 0.678431, 0.937255, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles2d" type="Particles2D" parent="."]
scale = Vector2( 0.25, 0.25 )
emitting = false
lifetime = 0.5
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="CollisionParticles2d" type="Particles2D" parent="."]
scale = Vector2( 0.25, 0.25 )
emitting = false
lifetime = 0.5
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="BeamParticles2d" type="Particles2D" parent="."]
scale = Vector2( 0.25, 0.25 )
emitting = false
lifetime = 0.5
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 661, -8 )
shape = SubResource( 9 )
